--- a/templates/base.html
+++ b/templates/base.html
@@ -3,19 +3,17 @@
 <title>{% block title %}Title{% endblock %}</title>
 <style>
 .video-container {
-    position: relative;
+    position:absolute; top:0; left:0;
+    color:white; background-color:black;
 }
 video {
     transition-duration: .2s;
-    width:100%;
-    /*max-width: 100vw;*/
-    max-height: calc(100vh - 30px - 4em);
-    display: block;
-    margin:1px auto;
+    width:100%; max-height: 100vh;
+    outline:none;
+    cursor:none;
 }
 .subtitle-outer {
-    position: absolute;
-    bottom: 40px;
+    position: absolute; bottom: 90px;
     text-align: center;
     color: #fff;
     text-shadow: #000 0px 0px 12px;
@@ -35,15 +33,14 @@ video {
     display: table;
     table-layout: fixed;
     border-collapse: collapse;
-    width: calc(100vw - 150px);
+    width: 100%;
     margin: 0 auto;
 }
 .subtitle-option, .subtitle-previous, .subtitle-next {
     display: table-cell;
-    border:1px solid black;
-    height: 2em;
     text-align: center;
     vertical-align: middle;
+    height:15px;
 }
 main {
     max-width: 50em;
